# xarray-treeview

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-test.yml  publish.yml
src/pyqt_xarray_treeview/: PyQtXarrayTreeItem.py  PyQtXarrayTreeModel.py  PyQtXarrayTreeView.py  __init__.py  xarray_tree.py
src/xarray_treeview/: PyQtXarrayTreeItem.py  PyQtXarrayTreeModel.py  PyQtXarrayTreeView.py  XarrayTreeItem.py  XarrayTreeModel.py  XarrayTreeView.py  XarrayTreeViewer.py  __init__.py
src/xarray_treeview/old/: XarrayTreeViewer.py
