[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "xarray-treeview"
description = "PyQt/PySide model/view for tree of Xarray datasets."
dynamic = ["version"]
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy<2",
    "xarray>=2023.12.0",
    "qtpy>=2.4.1",
    "qtawesome>=1.3.0",
    "pyqt-ext>=1.2.7",
    "xarray-datatree @ git+https://github.com/marcel-goldschen-ohm/datatree",
]
readme = "README.md"
keywords = ["PyQt", "PySide", "xarray", "tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]


[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/xarray-treeview"
repository = "https://github.com/marcel-goldschen-ohm/xarray-treeview"
issues = "https://github.com/marcel-goldschen-ohm/xarray-treeview/issues"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"


[tool.pdm.dev-dependencies]
# file paths assume local dev packages are in same dir as this package
dev = [
    "-e pyqt-ext @ file:///${PROJECT_ROOT}/../pyqt-ext",
]
lint = [
    "flake8",
]
test = [
    "pytest",
    "pytest-cov",
]
