[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "xarray-treeview"
description = "PyQt/PySide model/view for tree of Xarray datasets."
dynamic = ["version"]
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.2",
    "xarray>=2025.3.1",
    "qtpy>=2.4.1",
    "qtawesome>=1.4.0",
    "pyqt-ext>=2025.4.9.2",
]
readme = "README.md"
keywords = ["PyQt", "PySide", "xarray", "tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]


[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/xarray-treeview"
repository = "https://github.com/marcel-goldschen-ohm/xarray-treeview"
issues = "https://github.com/marcel-goldschen-ohm/xarray-treeview/issues"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"
